--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,12 @@ android {
         jvmTarget = '17'
     }
     buildFeatures {
-        viewBinding true
+        dataBinding = true
     }
     namespace 'com.example.android.unscramble'
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
